<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checkable="true"
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home_black_36dp"
            android:title="@string/drawer_home"/>
        <item
            android:checkable="true"
            android:id="@+id/drawer_calendar"
            android:icon="@drawable/ic_date_range_black_36dp"
            android:title="@string/drawer_calendar">
        </item>
        <item
            android:checkable="true"
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_applications_black_36dp"
            android:title="@string/drawer_settings"/>
        <item
            android:checkable="true"
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_power_settings_new_black_36dp"
            android:title="@string/drawer_logout"/>
    </group>
</menu>