<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.behealthy.gincos.activities.MainActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/main_progress_graph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:paddingTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/slavoTextView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.behealthy.gincos.utils.MyTextView
        android:id="@+id/slavoTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/main_level"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/main_level_progress"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/main_level_number" />

    <com.behealthy.gincos.utils.MyTextView
        android:id="@+id/main_level_number"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="14"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/main_level_progress"
        app:layout_constraintLeft_toRightOf="@+id/slavoTextView2"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/main_level_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:progress="34"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/daily_button_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <FrameLayout
            android:id="@+id/daily_registry_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true">

            <com.behealthy.gincos.utils.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingTop="8dp"
                android:paddingBottom="12dp"
                android:background="@drawable/daily_registry_button_shape"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/main_daily_registry"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </FrameLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_gravity="bottom"
            android:background="@color/blueDark" />

    </FrameLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <com.behealthy.gincos.utils.MyTextView
        android:id="@+id/slavoTextView"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/main_active_tasks"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <RelativeLayout
        android:id="@+id/main_pager_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/daily_button_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slavoTextView"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:id="@+id/main_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <android.support.v4.view.ViewPager
            android:id="@+id/main_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/main_tabDots"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

        </android.support.v4.view.ViewPager>

        <android.support.design.widget.TabLayout
            android:id="@+id/main_tabDots"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>